:recycle: Fix format-visual alignment.

--- a/frontend/scss/components/molecules/format-visual.scss
+++ b/frontend/scss/components/molecules/format-visual.scss
@@ -29,18 +29,20 @@ the border and format around the images.
   animation: bounce 10s ease-in-out infinite;
 
   &-image {
-    width: 50%;
+    width: 100%;
     @include box-shadow;
     transform: rotate3d(-5, 5,-5 ,-40deg);
+    transform-origin: bottom left;
   }
 
   &-bottom-image {
-    margin-bottom: 25%;
+    margin: 0 0 25% 5%;
   }
 
   &-top-image {
     border: 5px solid color('doger-blue');
     transform: rotate3d(-5, 5,-5 ,-40deg) translateX(-100%);
+    transform-origin: bottom left;
     animation: slide 1s cubic-bezier(0.46, 0, 0.31, 1) 3.5s forwards;
     @include box-shadow;
 
@@ -57,9 +59,10 @@ the border and format around the images.
 
   &-code-snippet {
     position: absolute;
-    margin-left: -15%;
+    margin-right: -15%;
     margin-top: -10%;
     transform: rotate3d(-55, 20, -40, -40deg);
+    transform-origin: bottom left;
     animation: bounce-code 5s ease-in-out 0.25s infinite;
 
     &-highlight:before {
